--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1618,7 +1618,7 @@ input, select, textarea {
 			font-size: 0.6rem;
 			opacity: 0.75;
 			margin-bottom: 0;
-			text-transform: uppercase;
+			text-transform: capitalize;
 		}
 
 		body.is-article-visible #footer {
